sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:9: error: type mismatch;
 found   : Unit
 required: Boolean
	if (cpt=0)
               ^